--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
+    "react-async": "^10.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^7.20.3",
     "react-native": "0.64.3",
